# minidalle2

./: .dockerignore  .gitignore  Dockerfile  MLproject  README.md  ngrok_config.example.yaml  pyproject.toml  requirements.txt  snippets.md
k8s/: job-download-images.yaml  nfs.yaml  pod-busybox-with-volumes.yaml  pod-busybox.yaml  pod-console.yaml  pod-idle.yaml  pvc.yaml
src/: logging.conf
src/minidalle2/: logging.py
src/minidalle2/commands/: build_index_command.py  download_index_command.py  infer_command.py  train_clip_command.py  train_decoder_command.py  train_prior_command.py
src/minidalle2/repositories/: mlflow_repository.py
src/minidalle2/server/api/: datasets.py  main.py
src/minidalle2/server/commands/: build_index_command.py  download_images_command.py  import_annotations_command.py  update_splits_command.py  validate_annotations_command.py
src/minidalle2/server/repositories/: annotation_repository.py
src/minidalle2/server/usecases/: build_index.py  download_images.py  get_data.py  get_dataset_len.py  import_annotations.py  update_splits.py  validate_annotations.py
src/minidalle2/server/values/: server_config.py
src/minidalle2/trainer/commands/: download_index_command.py  infer_command.py  train_clip_command.py  train_decoder_command.py  train_prior_command.py
src/minidalle2/trainer/repositories/: mlflow_repository.py
src/minidalle2/trainer/usecases/: download_index.py  train_clip.py  train_decoder.py  train_prior.py
src/minidalle2/trainer/values/: custom_remote_dataset.py  registered_model.py  trainer_config.py
src/minidalle2/usecases/: build_index.py  download_index.py  infer.py  model.py  repository.py  train_clip.py  train_decoder.py  train_prior.py
src/minidalle2/utils/: validate_image.py
src/minidalle2/values/: config.py  custom_remote_dataset.py  datasets.py  registered_model.py  sampler.py  trainer_config.py
tests/fixtures/datasets/: index.db
tests/fixtures/datasets/annotations/: foo.json
tests/integration/: test_train_command.py
tests/integration/server/: test_download_images.py  test_get_data.py  test_import_annotations.py
tests/integration/trainer/: test_train_command.py
tests/minidalle2/trainer/values/: test_custom_remote_dataset.py  test_sampler.py
tests/minidalle2/values/: test_custom_remote_dataset.py  test_sampler.py
tests/tmp/: test_tmp.py
